<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StrikingLights</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_off">bluetooth off</string>
    <string name="status">DEVICE: </string>
    <string name="status_from_device"><![CDATA[< Status from Device>]]></string>
    <string name="discover_new_devices">discover new devices</string>
    <string name="show_paired_devices">show paired devices</string>
    <string name="send">send</string>
    <string name="read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="clear">clear</string>
    <string name="echo_on">echo on</string>
    <string name="echo_off">echo off</string>
    <string name="help">help</string>
    <string name="messages">Messages</string>
    <string name="previous">previous</string>
    <string name="ch1">1</string>
    <string name="ch2">2</string>
    <string name="ch3">3</string>
    <string name="ch4">4</string>
    <string name="ch5">5</string>
    <string name="ch6">6</string>
    <string name="ch7">7</string>
    <string name="ch8">8</string>
    <string name="clear_all">Clear Chan</string>
    <string name="set_all">Set Chan</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="blu">B</string>
    <string name="grn">G</string>
    <string name="red">R</string>
    <string name="enter_a_command">Command</string>
    <string name="back">exit</string>
    <string name="set_colors">set R-G-B</string>
    <string name="clr_colors">clear R-G-B</string>
    <string name="set">set</string>
    <string name="run">run</string>
    <string name="color">color</string>
    <string name="intensity">intensity</string>
    <string name="clear_setup">Clear Setup</string>
    <string name="Vc_editText">00</string>

</resources>
