<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clock_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/msg_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/messages"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_btn" />

    <TextView
        android:id="@+id/readBuffer"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scrollbarSize="20dp"
        android:scrollbars="vertical"
        android:textColor="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_textView" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:text="@string/clear"
        android:textColor="#0F30EA"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/echoff_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:text="@string/send"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/clear_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cmd_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:autofillHints="command"
        android:background="#E8EEF1"
        android:ems="10"
        android:hint="@string/enter_a_command"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter|textNoSuggestions"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/send_btn"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Command" />

    <Button
        android:id="@+id/previous_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_revert"
        android:soundEffectsEnabled="true"
        android:text="@string/back"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Pix_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readBuffer" />

    <Button
        android:id="@+id/pixels_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="PIXELS"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/Pix_editText"
        app:layout_constraintTop_toBottomOf="@+id/readBuffer" />

    <Button
        android:id="@+id/read_clock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Clock"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/sync_clock_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readBuffer" />

    <Button
        android:id="@+id/sync_clock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Sync"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/pixels_button"
        app:layout_constraintStart_toEndOf="@+id/read_clock_btn"
        app:layout_constraintTop_toBottomOf="@+id/readBuffer" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/previous_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sync_clock_btn" />

    <Button
        android:id="@+id/echon_btn"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:text="E\n1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/echoff_btn"
        android:layout_width="33dp"
        android:layout_height="wrap_content"
        android:text="E\n0"
        app:layout_constraintStart_toEndOf="@+id/echon_btn"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>